@@ -6,6 +6,8 @@ Version 6.6 - not yet released
 * map
   - optional distinct map zoom on each page (#1603)
   - add label selection "Task waypoints & airfields"
+* cross section
+  - show airspace names (#1149, #2390)
 * user interface
   - replay fast-forward
   - green InfoBox distance when inside observation zone (#2560)
